Fix adv search height overflow

--- a/res/css/style_advancedSearchButton.css
+++ b/res/css/style_advancedSearchButton.css
@@ -12,13 +12,13 @@
     text-align: left;
     font-family: "Verdana";
     padding: 1em;
-
+    max-height: calc(100vh - 5.5rem);
+    overflow-y: auto;
     opacity: 0.85;
     z-index: 20;
 }
 
-.advanced_search *
-{
+.advanced_search * {
     font-family: "Verdana";
     display: block;
 }
@@ -27,43 +27,31 @@
     transform: translateX(0);
 }
 
-.advanced_search h2
-{
+.advanced_search h2 {
     font-size: 1em;
     margin-bottom: 2em;
 }
 
-.advanced_search .section_title
-{
+.advanced_search .section_title {
     font-size: 1em;
     margin-top: 2em;
 }
 
-.advanced_search label
-{
+.advanced_search label {
     font-size: 0.85em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
 
-.advanced_search > #dimension_section
-{
-    
-}
-
-.advanced_search #min_width_div, #min_height_div
-{
+.advanced_search #min_width_div, #min_height_div {
     display: inline-block;
     width: 48%;
 }
 
-.advanced_search #max_width_div, #max_height_div
-{
+.advanced_search #max_width_div, #max_height_div {
     display: inline-block;
-    float: right;
     width: 48%;
 }
-
 
 .advanced_search a {
     color: #fff;
@@ -77,11 +65,13 @@
         width: 25em;
     }
 }
+
 @media screen and (max-width: 55em) {
-    .advanced_search{
+    .advanced_search {
         width: 15em;
     }
 }
+
 .advanced_search #btn_search {
     width: 8em;
     font-size: 1.1em;
@@ -100,14 +90,14 @@
 }
 
 .advanced_search input {
-	width: calc(100% - 0.6em);
+    width: calc(100% - 0.6em);
     height: 2.5em;
-	font-size: 0.85em;
+    font-size: 0.85em;
     color: gray;
-	margin-top: auto;
-	margin-bottom: auto;
-	padding: 0.3em;
-	background-color: white;
-	border-width: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 0.3em;
+    background-color: white;
+    border-width: 0;
     border-radius: 0.2em;
 }
